[package]
name = "sounds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cpal = "0.14.0"
crossbeam = "0.8.2"
ringbuf = "0.3.1"
rustyline = "10.0.0"
rustfft = "6.0.1"
num-complex = "0.4.2"
